--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +7,39 @@
     <title>Pre entrega</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <form class="col-12">
+                <fieldset class="text-danger">CREACIÓN DE PRODUCTO</fieldset>
+                <div class="form-group">
+                  <label for="">Titulo</label>
+                  <input type="text" class="form-control" id="titulo">
+                  <label for="">Descripción</label>
+                  <textarea type="text" class="form-control" id="descripcion"  cols="30" rows="10"></textarea>
+                  <small>Describa su producto en 255 caracteres</small>
+                  <label for="">Codigo</label>
+                  <input type="text" class="form-control" id="Codigo">
+                  <label for="">Precio</label>
+                  <input type="text" class="form-control" id="Precio">
+                  <label for="">Estatus</label>
+                  <input type="text" class="form-control" id="Estado">
+                  <label for="">Cantidad en stock</label>
+                  <input type="text" class="form-control" id="Cantidad">
+                  <label for="">Categoría</label>
+                  <input type="text" class="form-control" id="Categoria">
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputPassword1">Password</label>
+                  <input type="password" class="form-control" id="contraseña">
+                </div>
+                <div class="form-group form-check">
+                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+        </div>
+    </div>
 </body>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
